2009-04-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Jumping with search & replace panel to files may no longer
	  fold the jump destination.

2009-04-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Track
	  comment tag API.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Renamed
	  PixbufService to ImageService.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed "Bug
	  489963 - Files loose execution bit when saved".

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Track api changes.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor.Extension/TemplateCodon.cs: (Revert
	  revision 132136)

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor.Extension/TemplateCodon.cs: Fixed
	  possible bug in template codons.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Track API
	  changes.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.SourceEditor.csproj: don't require specific
	gtk-sharp version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.SourceEditor.addin.xml: Bump MD version.

2009-04-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added patch
	  from Levi Bard
	  <taktaktaktaktaktaktaktaktaktak@gmail.com>:Make sure GUI
	  operations are performed in the GUI thread.


2009-04-14  Mike Krüger  <mkrueger@novell.com>
