@@ -227,19 +227,22 @@
 				icon = "gtk-copy" 
 				_description = "Copy the selection" 
 				defaultHandler = "MonoDevelop.Ide.Commands.DefaultCopyHandler"
-				shortcut = "Control|C"/>
+				shortcut = "Control|C"
+				macShortcut = "Meta|C" />
 		<Command id = "MonoDevelop.Ide.Commands.EditCommands.Cut"
 				_label = "Cu_t"
 				icon = "gtk-cut" 
 				_description = "Cut the selection" 
 				defaultHandler = "MonoDevelop.Ide.Commands.DefaultCutHandler"
-				shortcut = "Control|X"/>
+				shortcut = "Control|X"
+				macShortcut = "Meta|X" />
 		<Command id = "MonoDevelop.Ide.Commands.EditCommands.Paste"
 				_label = "_Paste" 
 				icon = "gtk-paste"
 				_description = "Paste the clipboard" 
 				defaultHandler = "MonoDevelop.Ide.Commands.DefaultPasteHandler"
-				shortcut = "Control|V"/>
+				shortcut = "Control|V"
+				macShortcut = "Meta|V" />
 		<Command id = "MonoDevelop.Ide.Commands.EditCommands.Delete"
 				_label = "_Delete" 
 				_description = "Delete the selection"
@@ -253,7 +256,8 @@
 				_label = "_Undo" 
 				icon = "gtk-undo" 
 				_description = "Undo last action" 
-				shortcut = "Control|Z" />
+				shortcut = "Control|Z"
+				macShortcut = "Meta|Z" />
 		<Command id = "MonoDevelop.Ide.Commands.EditCommands.Redo" 
 				_label = "_Redo" 
 				icon = "gtk-redo" 
@@ -263,6 +267,7 @@
 				_label = "Select _All" 
 				_description = "Select all text" 
 				shortcut = "Control|A"
+				macShortcut = "Meta|A"
 				defaultHandler = "MonoDevelop.Ide.Commands.DefaultSelectAllHandler"
 				icon = "md-select-all" />
 		<Command id = "MonoDevelop.Ide.Commands.EditCommands.ToggleCodeComment"
@@ -461,11 +466,13 @@
 				defaultHandler = "MonoDevelop.Ide.Commands.NewFileHandler"
 				_label = "_File..."
 				shortcut = "Control|N"
+				macShortcut = "Meta|N"
 				_description = "Create a new file"
 				icon = "gtk-new" />
 		<Command id = "MonoDevelop.Ide.Commands.FileCommands.Save" 
 				icon = "gtk-save" 
 				shortcut = "Control|S"
+				macShortcut = "Meta|S"
 				_description = "Save the active document"
 				_label = "_Save" />
 		<Command id = "MonoDevelop.Ide.Commands.FileCommands.SaveAll"
@@ -478,6 +485,7 @@
 				_label = "_Solution..." 
 				icon = "md-new-project-icon" 
 				_description = "Create a new solution" 
+				macShortcut = "Meta|Shift|N"
 				shortcut = "Control|Shift|N"  />
 		<Command id = "MonoDevelop.Ide.Commands.FileCommands.CloseFile"
 				_label = "_Close File" 
@@ -902,6 +910,12 @@
 		<Command id = "MonoDevelop.Ide.Commands.TextEditorCommands.ScrollLineDown"
 				_label = "Scroll line down"
 				shortcut = "Control|Down" />
+		<Command id = "MonoDevelop.Ide.Commands.TextEditorCommands.ScrollPageUp"
+				_label = "Scroll page up"
+				macShortcut = "Page_Up" />
+		<Command id = "MonoDevelop.Ide.Commands.TextEditorCommands.ScrollPageDown"
+				_label = "Scroll page down"
+				macShortcut = "Page_Down" />
 		<Command id = "MonoDevelop.Ide.Commands.TextEditorCommands.DeleteLine"
 				_label = "Delete entire line" />
 		<Command id = "MonoDevelop.Ide.Commands.TextEditorCommands.DeleteToLineEnd"
