@@ -1,3 +1,11 @@
+2009-04-23  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Ide.Commands/TextEditorCommands.cs: Add commands
+	  for ScrollPageDown and ScrollPageUp.
+
+	* MonoDevelop.Ide.addin.xml: Add commands for ScrollPageDown
+	  and ScrollPageUp. Add some Mac shortcuts.
+
 2009-04-23  Mike Krüger  <mkrueger@novell.com>
 
 	* gtk-gui/gui.stetic:
